--- a/sass/site/navigation/_navigation.scss
+++ b/sass/site/navigation/_navigation.scss
@@ -87,7 +87,7 @@
 	flex: 1;
 }
 
-.ast-main-header-bar-alignment {
+nav {
 	flex: 1;
 }
 
@@ -105,7 +105,7 @@
 	.main-header-bar-navigation {
 		flex: auto;
 	}
-	.ast-main-header-bar-alignment {
+	nav {
 		display: block;
 		flex: auto;
 		width: calc(100% + 40px);
